--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -10,6 +10,7 @@
   width: 100%;
   box-shadow: 2px -1px 5px 1px rgba(0, 0, 0, 0.2);
   gap: 16px; /* Optional */
+  z-index: 300;
 }
 
 .footer-item {
