--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -10,7 +10,7 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field mt-5">
     <%= form.label :name, "NAME OF THE GAME" %>
     <%= form.text_field :name, placeholder: "PARIS CONQUEST", required: true %>
   </div>
