--- a/app/assets/stylesheets/pages/_mine.scss
+++ b/app/assets/stylesheets/pages/_mine.scss
@@ -134,13 +134,14 @@
 .edit-button, .delete-button {
   background-color: transparent;
   color: #fff;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: bold;
   border: none;
   cursor: pointer;
-  padding: 5px;
+  padding: 3px;
   border-radius: 5px;
   transition: background-color 0.3s ease, color 0.3s ease;
+  z-index: 1;
 }
 
 .mapy {
