--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,7 @@
   <% end %>
 
   <div class="nav-logo">
-    <%= link_to "#", class: "navbar-logo" do %>
+    <%= link_to root_path, class: "navbar-logo" do %>
       <%= image_tag "logo_rn.svg", alt: "logo Icon", size: "40x40", class: "rounded-3" %>
     <% end %>
   </div>
