--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
 
   <% if params[:controller] == "games" && params[:action] == "show" %>
     <% current_game = Game.find_by(id: params[:id]) %>
-    <% if current_game&.status == "ongoing" %>
+    <% if current_game&.status == "ongoing" || "finish" %>
       <div class="navbar-item refresh-icon">
         <%= link_to update_runs_game_path(current_game), data: { turbo_method: :post } do %>
           <%= image_tag("refresh.svg", alt: "Refresh", size: "30x30") %>
