--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -5,10 +5,10 @@
     </div>
     <div class="map1">
       <div id="map-<%= @game.id %>" style="width: 100%; height: 400px;"
-           data-controller="mappending"
-           data-mappending-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
-           data-mappending-centroid-value="<%= @centroid.to_json %>"
-           data-mappending-coordinates-value="<%= @game.coordinate_layer %>">
+          data-controller="mappending"
+          data-mappending-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+          data-mappending-centroid-value="<%= @game.instance_variable_get(:@centroid).to_json %>"
+          data-mappending-coordinates-value="<%= @game.coordinate_layer %>">
       </div>
     </div>
     <div class="details">
