--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -161,8 +161,8 @@
         </div>
 
         <div class="truc">
-          <p class="nami">Time left</p>
-          <p class="namip"><%= (@game.end_date - Date.today).to_i %> days</p>
+          <p class="nami">Finished</p>
+          <p class="namip"><%= (Date.today - @game.end_date).to_i %> days ago</p>
         </div>
 
         <div class="truc">
