--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -81,16 +81,16 @@
   font-size: 16px;
 }
 .red {
-  background-color: $blouclaire;
+  background-color: #00163e;
 }
 .orange {
-  background-color: $orangy;
+  background-color: #002d80 ;
 }
 .black {
-  background-color: #333333;
+  background-color: #0053eb;
 }
 .blue {
-  background-color: $blou;
+  background-color: #3f77dd;
 }
 
 .rounded-circle {
