--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -126,7 +126,7 @@ body {
 }
 
 .nami {
-  font-size: 12px;
+  font-size: 14px;
   margin: 0px;
   color: rgb(88, 88, 88);
 }
@@ -200,8 +200,9 @@ body {
   background: #f9f9f9;
   margin-bottom: 5px;
   border-radius: 5px;
-  font-size: 0.9em;
-  color: #555;
+  font-size: 16px;
+  color: #3f3f3f;
+  height: 40px;
 }
 
 // .rankongoing {
@@ -250,6 +251,7 @@ body {
 .rank span {
   flex: 1;
   text-align: center;
+  padding: 5px;
 }
 
 .btncard {
