--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -162,7 +162,7 @@
 
         <div class="truc">
           <p class="nami">Finished</p>
-          <p class="namip"><%= (Date.today - @game.end_date).to_i %> days ago</p>
+          <p class="namip"><%= -((Date.today - @game.end_date)).to_i %> days ago</p>
         </div>
 
         <div class="truc">
