--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,9 +1,9 @@
 .footer {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background-color: white;
-  padding: 12px 4px;
+  padding: 12px 24px;
   position: sticky;
   margin-top: 10px;
   bottom: 0;
