--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
         <%= link_to auth_strava_path do %>
           <%= image_tag 'stravabutton.png', alt: 'Connect with Strava' %>
         <% end %>
-        <%= link_to "Skip for now", mine_games_path, class: "btn skip-button" %>
+        <%= link_to "SKIP FOR NOW", mine_games_path, class: "btn skip-button" %>
       </div>
     <% else %>
     <%= link_to "Strava already connected", mine_games_path, class: "text-white text-decoration-none" %>
