--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -16,9 +16,9 @@
             <small class="text-secondary"><%= time_ago_in_words(notification.created_at) %> ago</small>
           </div>
           <!-- Action Section -->
-          <div class="ms-auto">
+          <div class="ms-auto h-5 w-5">
               <%= link_to notification_path(notification), data: { turbo_method: :delete, turbo_confirm: "Êtes-vous sûr ?" } do %>
-                <i class="fas fa-times"></i>
+                <i class="fas fa-times" style="font-size: 26px;"></i>
               <% end %>
           </div>
         </div>
