--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -83,7 +83,7 @@
 
         <div class="truc">
 
-          <p class="namip"><img src="/images/players.svg" alt="User Icon" class="iconx"><%= @game.covered_surface_percentage %> %</p>
+          <p class="namip"><img src="/images/pacman.svg" alt="User Icon" class="iconx"><%= @game.covered_surface_percentage %> %</p>
         </div>
 
         <div class="truc">
