--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -66,9 +66,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
-  color: white;
-  font-size: 1.2em;
+  border-radius: 50px;
+  color: rgb(236, 236, 236);
+  font-size: 28px;
 }
 
 .stat-value {
