--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -28,7 +28,7 @@
   <div class="status">
     <div class="infos"> <img src="/images/players.svg" alt="Timer Icon" class="icon"><%= game.players.count %> / <%= game.nb_of_players %>   </div>
     <div class="infos"><img src="/images/sablier.svg" alt="Timer Icon" class="icon"> <%= game.duration %> days</div>
-    <div class="infos"><img src="/images/surface.svg" alt="Timer Icon" class="icon"> <%= game.surface_in_km2 %> km²</div>
+    <div class="infos"><img src="/images/pacman.svg" alt="Timer Icon" class="icon"> <%= game.surface_in_km2 %> km²</div>
   </div>
   </div>
 </div>
