--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -168,6 +168,7 @@ body {
   display: flex;
   justify-content: space-around;
   margin-bottom: 10px;
+  align-items: center;
 }
 
 .player {
@@ -181,32 +182,32 @@ body {
 
 .playerimgfirst{
   display: block;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin: 0 auto 5px;
+  background-color: #ddd;
+  border: 5px solid rgb(255, 217, 66);
+}
+
+.playerimgsecond{
+  display: block;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin: 0 auto 5px;
+  background-color: #d6d6d6de;
+  border: rgb(194, 194, 194) solid;
+}
+
+.playerimgthird{
+  display: block;
   width: 60px;
   height: 60px;
   border-radius: 50%;
   margin: 0 auto 5px;
   background-color: #ddd;
-  border: 5px solid rgb(255, 204, 0);
-}
-
-.playerimgsecond{
-  display: block;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin: 0 auto 5px;
-  background-color: #ddd;
-  border: rgb(165, 165, 165) solid;
-}
-
-.playerimgthird{
-  display: block;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin: 0 auto 5px;
-  background-color: #ddd;
-  border: rgb(255, 192, 120) solid;
+  border: rgb(172, 97, 0) solid;
 }
 
 
