--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -190,5 +190,6 @@
         <% end %>
       </div>
     </div>
+    <%= button_to "IMPORT YOUR RUNS", update_runs_game_path(@game), data: { turbo_method: :post }, class: "refreshhh" %>
   </div>
 <% end %>
