--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -33,7 +33,7 @@
         <%= image_tag("your_runs.svg", alt: "feed Icon", size: "30x30") %>
       <% end %>
       <br>
-      <span><strong>FEED</strong></span>
+      <span><strong>JOIN GAME</strong></span>
     <% end %>
 </div>
 
