--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,7 +15,7 @@
 .chat-icon,
 .notif-icon {
   display: inline-block; /* Assure un alignement horizontal */
-  margin-left: 15px; /* Ajoute un espacement entre les deux icônes */
+  // margin-left: 15px; /* Ajoute un espacement entre les deux icônes */
 }
 
 .notif-icon {
