--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -156,25 +156,40 @@
       </div>
     </div>
 
-    <div class="leaderboard">
-      <div class="player-icons">
-        <% top_players = @game_players.take(3) %> <!-- Prendre les 3 premiers joueurs -->
+<div class="leaderboard">
+  <div class="player-icons">
+    <% top_players = @game_players.take(3) %> <!-- Prendre les 3 premiers joueurs -->
 
-        <div class="player second">
-          <img src="/images/avatar1.svg" alt="avatar" class="playerimgsecond">
-          <span><%= top_players[1]&.player&.nickname || 'No nickname' %></span>
-        </div>
+    <!-- Joueur en deuxième position -->
+    <div class="player second">
+      <% if top_players[1]&.player&.photo&.attached? %>
+        <%= image_tag top_players[1].player.photo, alt: "avatar", class: "playerimgsecond" %>
+      <% else %>
+        <%= image_tag "/images/avatar1.svg", alt: "avatar", class: "playerimgsecond" %>
+      <% end %>
+      <span><%= top_players[1]&.player&.nickname || 'No nickname' %></span>
+    </div>
 
-        <div class="player first">
-          <img src="/images/avatar1.svg" alt="avatar" class="playerimgfirst">
-          <span><%= top_players[0]&.player&.nickname || 'No nickname' %></span>
-        </div>
+    <!-- Joueur en première position -->
+    <div class="player first">
+      <% if top_players[0]&.player&.photo&.attached? %>
+        <%= image_tag top_players[0].player.photo, alt: "avatar", class: "playerimgfirst" %>
+      <% else %>
+        <%= image_tag "/images/avatar1.svg", alt: "avatar", class: "playerimgfirst" %>
+      <% end %>
+      <span><%= top_players[0]&.player&.nickname || 'No nickname' %></span>
+    </div>
 
-        <div class="player third">
-          <img src="/images/avatar1.svg" alt="avatar" class="playerimgthird">
-          <span><%= top_players[2]&.player&.nickname || 'No nickname' %></span>
-        </div>
-      </div>
+    <!-- Joueur en troisième position -->
+    <div class="player third">
+      <% if top_players[2]&.player&.photo&.attached? %>
+        <%= image_tag top_players[2].player.photo, alt: "avatar", class: "playerimgthird" %>
+      <% else %>
+        <%= image_tag "/images/avatar1.svg", alt: "avatar", class: "playerimgthird" %>
+      <% end %>
+      <span><%= top_players[2]&.player&.nickname || 'No nickname' %></span>
+    </div>
+  </div>
 
       <div class="rankings">
         <% @game_players.each_with_index do |game_player, index| %>
