--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -146,7 +146,7 @@
 
         <div class="truc">
 
-          <p class="namip"><img src="/images/sablier.svg" alt="User Icon" class="iconx"><%= @game.duration %> D</p>
+          <p class="namip"><img src="/images/sablier.svg" alt="User Icon" class="iconx"><%= @game.duration %> d</p>
         </div>
 
         <div class="truc">
