--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
       <meta property="og:image" content="<%= meta_image %>" />
       <meta property="og:description" content="<%= meta_description %>" />
       <meta property="og:site_name" content="<%= meta_title %>" />
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
