--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -76,7 +76,7 @@
       <div class="infox">
         <div class="truc">
 
-          <p class="namip"><img src="/images/players.svg" alt="User Icon" class="iconx"><%= @game.nb_of_players %> </p>
+          <p class="namip"><img src="/images/players.svg" alt="User Icon" class="iconx"><%= @game.players.count %> </p>
         </div>
 
         <div class="truc">
